# madefor.cc

./: .gitignore  README.md  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: check.yml  deploy-page.yml  update-dns.yml
descriptions/: 9551.md  advancedperipherals.md  basalt.md  brag.md  c3d.md  cash.md  consult.md  craftos-pc.md  freax.md  guih.md  impulsive-cc.md  kristify.md  metis.md  misc.md  monitorsize.md  music.md  phileos.md  phoenix.md  plethora.md  poster.md  potatos.md  scm.md  skydocs.md  skygui.md  thox.md  unicornpkg.md  uwuntucc.md  webify.md  wolf-os.md  www.md  youcube.md
dns/: domains.py  gen_docs.py  lint.py  log.py  sync.py
docs/: CNAME
