[tool.poetry]
name = "madefor.cc"
version = "0.1.0"
description = ""
authors = ["Jonathan Coates <git@squiddev.cc>"]

[tool.poetry.dependencies]
python = "^3.8"
cloudflare = "^2.9.10"

[tool.poetry.dev-dependencies]
mypy = "^0.961"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
