[tool.poetry]
name = "madefor.cc"
version = "0.1.0"
description = ""
authors = ["Jonathan Coates <git@squiddev.cc>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
